knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Support_Matrix_Association__c/fields/pqcrush__Influence_And_Support_Matrix__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Influence_And_Support_Matrix__c</fullName>
    <label>Influence And Support Matrix</label>
    <referenceTo>pqcrush__pq_Influence_And_Support_Matrix__c</referenceTo>
    <relationshipName>Support_Matrix_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>