knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Support_Matrix_Association__c/fields/pqcrush__Order__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>