knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_Support_Matrix_Association__c/fields/pqcrush__Support__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Support__c</fullName>
    <label>Support</label>
    <referenceTo>pqcrush__pq_Support__c</referenceTo>
    <relationshipName>Support_Matrix_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>